# cinefy

./: .pre-commit-config.yaml  .python-version  Dockerfile  alembic.ini  build.sh  create_db.py  pyproject.toml  render.sh
migrations/: env.py
migrations/versions/: 0c2548ef8a4c_first_revision.py
scripts/: build-image.sh  create-env.sh  run.sh
src/: main.py  settings.py
src/common/: dependencies.py  exceptions.py  models.py
src/health_check/: api.py
src/movie/: api.py  schemas.py  services.py
src/movie/movie/: api.py  schemas.py  services.py
src/room/: schemas.py
src/seat/: schemas.py
src/theatre/: schemas.py
