[tool.poetry]
name = "cinefy"
version = "0.1.0"
description = ""
authors = ["Alan Rizzo <alan.rizzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
loguru = "^0.7.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
alembic = "^1.12.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
